new graphics + droppable + require.js + pgn parser

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <script src="./vendor/components/jquery/jquery.min.js"></script>
     <script src="./vendor/components/masonry/masonry.pkgd.min.js"></script>
     <script src="./vendor/desandro/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="./lib/pgn-parser/pgn-parser.js"></script>
+    <script src="./lib/droppable/droppable.js"></script>
     <script src="./lib/sikchess/sikchess.1.0.js"></script>
 
     <!-- grid base -->
