--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <script src="./vendor/desandro/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script src="./lib/pgn-parser/pgn-parser.js"></script>
     <script src="./lib/droppable/droppable.js"></script>
+    <script src="./lib/svg/svg.min.js"></script>
+    <script src="./lib/sikgraphmetro/sik.graphmetro.js"></script>
     <script src="./lib/sikchess/sikchess.1.0.js"></script>
 
     <!-- grid base -->
@@ -38,17 +40,17 @@
         <div class="grid-item col-2 grid-height-50 bg-light">
             Sub Menu
         </div>
-        <div class="grid-item col-6 grid-height-75">
+        <div class="grid-item col-6 grid-height-65">
             <div id='chessboard'></div>
         </div>
         <div class="grid-item col-2 grid-height-95 bg-light">
             Right Nav
         </div>
         <div class="grid-item col-2 grid-height-40">
-            Tree
         </div>
-        <div class="grid-item col-6 grid-height-20 bg-light">
-            Comments + Engine
+        <div class="grid-item col-6 grid-height-30 bg-light">
+            <?xml-stylesheet type="text/css" href="./lib/sikgraphmetro/svg-graphmetro.css" ?>
+                <svg id="graph-container" style="width:100%; height:100%"></svg>
         </div>
     </div>
 
